2006-08-24    <tino@firebird.03.softkill.net>

	* getopt.h: reduced a lot of internal variables, also started to
	cut the oversized and far too big routine tino_getopt_hook
	(previously tino_getopt) into smaller pieces.

2006-08-23    <tino@firebird.03.softkill.net>

	* strwild.h: Unit-Tests and test-main added

	* Makefile-test.sh (unit): bugfix, stderr was not captured

2006-08-16    <tino@firebird.03.softkill.net>

	* proc.h (tino_wait_child_exact): little bugfix

2006-08-15    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_var_set_arg): changed if sequence to
	support arg==0
	(tino_getopt_hook): hook added
	(tino_getopt): created to call tino_getopt_hook

2006-08-14    <tino@firebird.03.softkill.net>

	* ex.h (tino_vpexit): added

	* curl.h: added

	* data.h: added

	* buf.h (tino_buf_fetch): added

	* debug.h: TINO_DP_data and TINO_DP_curl added

2006-08-12    <tino@firebird.03.softkill.net>

	* filetool.h (tino_file_filenameptr) renamed to tino_file_filenameptr_const
	(tino_file_filenameptr): added as nonconst version

2006-08-11    <tino@firebird.03.softkill.net>

	* proc.h (tino_wait_child_exact): added

2006-08-07    <tino@firebird.03.softkill.net>

	* term.h: added

2006-08-06    <tino@firebird.03.softkill.net>

	* slist.h (tino_glist_first, tino_glist_next, tino_slist_data)
	(tino_glist_step, tino_glist_add_data): added

	* sock.h (tino_sock_select): timeout_ms added
	(tino_sock_select_timeout): is now the routine with timeout

2006-08-01    <tino@firebird.03.softkill.net>

	* Makefile-tar.sh (tagcvs): Bug in checking of "make dist" fixed

	* md5.h (main): corrected, printed 1 byte to few digest!

	* longmath.h: added

	* xml.h: added

2006-07-30    <tino@firebird.03.softkill.net>

	* dir.h (tino_dir_read_err, tino_dir_read_imp): added

	* buf.h (tino_buf_add_buf): added

	* Makefile.tino.dist: VERSIONFILE and VERSIONNAME added

	* Makefile.proto (VERSIONFILE, VERSIONNAME): Rule for versioning